v0.3.2 (Unstable development revision)
- Test UPnP and source explorer in management dialog (updated source explorer 1/Jun)
- Moved PVR to separate shortcuts grouping in management dialog, additional options
- Improved labelID generation (submenu's will stick better to main menu's)
- Add option to tell management dialog not to fill label's on management dialog controls, additional label 500 for window title
- Fix for crash when no profiles.xml file
- Fix for single-list xml method to return to main menu item when hiding submenu

v0.3.1
- Fixes: No favourites showing in management dialog
         Script crash on choosing empty group in skin-managed selection dialog
		 Remove visibility condition for Eject Tray shortcut

v0.3.0
- Fix escaping of main menu items (includes method)
- Fix for custom nodes when using profiles
- Fix for includes method when using multiple profiles
- Load skin-provided playlists and playlists from sub-folders
- Ability to browse a plugin from the management dialog
- Ability to provide recommended shortcuts in management dialog
- Ability to choose to play or display a playlist
- Improved method of managing additional properties
- Method to list menu and submenus in a single include
- Ability to allow a user to select a shortcut, then pass this to the skin to manage
- Library/playlists/addon/favourites loading code moved to separate module, loaded threaded
- Menu now be rebuilt on skin or script version and profile changes (includes method)
- Updated language files from Transifex

v0.2.4
- Fix listing individual groups with <include> method
- Parse favourites.xml directly
- Add XBMC Commands shortcut group
- Updated language files from Transifex

v0.2.2
- New optional method of listing shortcuts via includes file
- Option to allow user to browse for image or use playlist as background
- Option to allow user to choose playlist as widget
- Overrides and defaults now limitable by groupname
- Fix for custom video nodes