@@ -226,10 +226,11 @@ You can then choose which widget to display based on the 'widget' property of th
 
 If there are particular shortcuts to skin-specific features you would like to give the user the option of choosing from, you can specify these in the overrides.xml.
 
-<shortcut label="[label]" type="[type]">[action]</shortcut>
+<shortcut label="[label]" type="[type]" condition="[Boolean condition]">[action]</shortcut>
 
 [label] - The display name of the shortcut (can be a localised string)
 [type] - The type of shortcut, e.g. "Movie" if this leads to an area of the movie library (can be a localised string)
+[Boolean condition] - [Optional] Replace with a string that must evaluate to True for the shortcut to appear in the management dialog
 [action] - The action associated with this shortcut
 
 
